[package]
name = "pgui-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
async-std = { version = "1", features = ["attributes"] }
gpui = { git = "https://github.com/zed-industries/zed" }
sqlx = { version = "0.7", features = [
    "runtime-async-std",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
